force-app/main/default/objects/Attendance__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty</label>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>Attendance Records</relationshipLabel>
    <relationshipName>Attendance_Records</relationshipName>
    <type>Lookup</type>
</CustomField>