force-app/main/default/objects/Attendance__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Attendance Records</relationshipLabel>
    <relationshipName>Attendance_Records</relationshipName>
    <type>Lookup</type>
</CustomField>