force-app/main/default/objects/Attendance__c/validationRules/Attendance_Future_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Attendance_Future_Date_Check</fullName>
    <active>true</active>
    <description>Prevents marking attendance for future dates</description>
    <errorConditionFormula>Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Attendance cannot be marked for future dates. Please select today&apos;s date or a past date.</errorMessage>
</ValidationRule>