force-app/main/default/objects/Attendance__c/validationRules/Attendance_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Attendance_Status_Required</fullName>
    <active>true</active>
    <description>Ensures attendance status is selected when marking attendance</description>
    <errorConditionFormula>ISBLANK(TEXT(Status__c))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Attendance Status is required. Please select Present, Absent, Late, or Excused.</errorMessage>
</ValidationRule>